tests/basic/post/assert/002.pan.out
tests/basic/post/assert/002.pan:4:1-4: error: unable to verify type of f02