tests/basic/post/assert/002.pan
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f02 : {v:unit|?}
f02 = assert false
